--- a/views/account.pug
+++ b/views/account.pug
@@ -2,8 +2,8 @@ extends layout
 
 block content
   .inner
-    h2= title
-    form(action="/account" method="POST")
+    form.form(action="/account" method="POST")
+      h2= title
       label(for="name") Name
       input(type="text" name="name" value=user.name)
       label(for="email") Email Address
